--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My webpage!</title>
+        <title>git html css</title>
     </head>
-    <body>Hello World! Hello again! Hello one more time</body>
+    <body>git clone, touch filename, git add filename, git commit -m "text", git status, git push, git pull, git log, git reset --hard commithash, git reflog </body>
 <html>
