--- a/hello.html
+++ b/hello.html
@@ -3,5 +3,5 @@
     <head>
         <title>git html css</title>
     </head>
-    <body>git clone, touch filename, git add filename, git commit -m "text", git status, git push, git pull, git log, git reset --hard commithash, git reflog </body>
+    <body>git clone touch filename, git add filename, git commit -m "text", git status, git push, git pull, git log, git reset --hard commithash, git reflog </body>
 <html>
