--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,11 @@
         <h1>
             useful commands in git
         </h1>
-        git clone, touch filename, git add filename, git commit -m "text", git status, git push, git pull, git log, git reset --hard commithash, git reflog </body>
+        <ul>
+            <li>
+                git clone, touch filename, git add filename, git commit -m, git status, git push, git pull, git log, git reset --hard commithash, git reflog
+            </li>
+        </ul>
+        <img src="2A WM.jpg" width="50%">
+    </body>
 <html>
