--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            useful commands in git
+            style="color:darkmagenta; text-align:center; " >useful commands in git<
         </h1>
         <ul>
             <li>
