--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,7 @@
         <title>git html css</title>
     </head>
     <body>
-        <h1>
-            style="color:darkmagenta; text-align:center; " >useful commands in git<
-        </h1>
+        <h1 style="color:darkmagenta;text-align:center;">useful commands in git</h1>
         <ul>
             <li>
                 git clone, touch filename, git add filename, git commit -m, git status, git push, git pull, git log, git reset --hard commithash, git reflog
