--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>git html css</title>
+        <style>
+            p1{
+                color:blue;
+                text-align:center;
+            }
+        </style>
     </head>
     <body>
         <h1 style="color:darkmagenta;text-align:center;">useful commands in git</h1>
@@ -11,5 +17,6 @@
             </li>
         </ul>
         <img src="2A WM.jpg" width="50%">
+        <p>this is a new paragraph</p>
     </body>
 <html>
