--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>git html css</title>
+        <link rel="stylesheet" href"styles.css">
         <style>
             p1{
                 color:blue;
@@ -10,7 +11,8 @@
         </style>
     </head>
     <body>
-        <h1 style="color:darkmagenta;text-align:center;">useful commands in git</h1>
+        <h1>git</h1>
+        <h2 style="color:darkmagenta;text-align:center;">useful commands in git</h2>
         <ul>
             <li>
                 git clone, touch filename, git add filename, git commit -m, git status, git push, git pull, git log, git reset --hard commithash, git reflog
