--- a/hello.html
+++ b/hello.html
@@ -4,21 +4,21 @@
         <title>git html css</title>
         <link rel="stylesheet" href"styles.css">
         <style>
-            p1{
+            p{
                 color:blue;
                 text-align:center;
             }
         </style>
     </head>
     <body>
-        <h1>git</h1>
-        <h2 style="color:darkmagenta;text-align:center;">useful commands in git</h2>
+        <h1>GIT</h1>
+        <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
             <li>
                 git clone, touch filename, git add filename, git commit -m, git status, git push, git pull, git log, git reset --hard commithash, git reflog
             </li>
         </ul>
         <img src="2A WM.jpg" width="50%">
-        <p>this is a new paragraph</p>
+        <p>this is a new paragraph!</p>
     </body>
 <html>
