--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
             <li>
-                git clone, touch filename, git add filename, git commit -m, git status, git push, git pull, git log, git reset --hard commithash, git reflog
+                git clone, touch + filename, git add + filename, git commit -m + "message", git status, git push, git pull, git log, git reset --hard + commithash, git reflog
             </li>
         </ul>
         <img src="2A WM.jpg" width="50%">
