--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,7 @@
         <title>git html css</title>
         <link rel="stylesheet" href"styles.css">
         <style>
-            p{
-                color:blue;
-                text-align:center;
-            }
+
         </style>
     </head>
     <body>
@@ -20,5 +17,6 @@
         </ul>
         <img src="2A WM.jpg" width="50%">
         <p>this is a new paragraph!</p>
+        <div>cs50</div>
     </body>
 <html>
