--- a/hello.html
+++ b/hello.html
@@ -15,6 +15,13 @@
                 git clone, touch + filename, git add + filename, git commit -m + "message", git status, git push, git pull, git log, git reset --hard + commithash, git reflog
             </li>
         </ul>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>date of birth</th>
+                <th>Number</th>
+            </tr>
+        </table>
         <img src="2A WM.jpg" width="50%">
         <p>this is a new paragraph!</p>
         <div>cs50</div>
