--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>cs50</title>
+        <title>cs50!</title>
         <link rel="stylesheet" href"styles.css">
         <style>
 
