--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>cs50</title>
+        <title>git html css</title>
         <link rel="stylesheet" href"styles.css">
-        <style>
-
+        <style>ul {
+            color:green;
+        }
         </style>
     </head>
     <body>
@@ -19,7 +20,7 @@
             <tr>
                 <th>Name</th>
                 <th>date of birth</th>
-                <th>Number</th>
+                <th>Numbergit </th>
             </tr>
         </table>
         <img src="2A WM.jpg" width="50%">
