--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>GIT</h1>
+        <form>
+            <input type="text" placeholder="full Name" name="name">
+            <button>Submit</button>
+        </form>
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
             <li>
