--- a/hello.html
+++ b/hello.html
@@ -13,18 +13,26 @@
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
             <li>
-                git clone, touch + filename, git add + filename, git commit -m + "message", git status, git push, git pull, git log, git reset --hard + commithash, git reflog
+                git clone,
+                touch + filename,
+                git add + filename,
+                git commit -m + "message",
+                git status,
+                git push, git pull,
+                git log,
+                git reset --hard + commithash,
+                git reflog
             </li>
         </ul>
         <table>
             <tr>
                 <th>Name</th>
                 <th>date of birth</th>
-                <th>Numbergit </th>
+                <th>phone</th>
             </tr>
         </table>
-        <img src="2A WM.jpg" width="50%">
-        <p>this is a new paragraph!</p>
+        <img src="2A WM.jpg" width="20%">
+        <p>This is a new paragraph!</p>
         <div>cs50</div>
     </body>
 <html>
