--- a/hello.html
+++ b/hello.html
@@ -12,17 +12,15 @@
         </form>
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
-            <li>
-                git clone,
-                touch + filename,
-                git add + filename,
-                git commit -m + "message",
-                git status,
-                git push, git pull,
-                git log,
-                git reset --hard + commithash,
-                git reflog
-            </li>
+            <li>git clone</li>
+            <li>touch + filename</li>
+            <li>git add + filenames</li>
+            <li>git commit -m + "message"</li>
+            <li>git status</li>
+            <li>git push / git pull</li>
+            <li>git log</li>
+            <li>git reset --hard + hash nr</li>
+            <li>git reflog</li>
         </ul>
         <table>
             <tr>
