--- a/hello.html
+++ b/hello.html
@@ -29,7 +29,7 @@
                 <th>phone</th>
             </tr>
         </table>
-        <img src="2A WM.jpg" width="20%">
+        <img src="2A WM.jpg" width="20%" class="center">
         <p>This is a new paragraph!</p>
         <div>cs50</div>
     </body>
