fixed link to other html file

--- a/country.html
+++ b/country.html
@@ -6,16 +6,16 @@
     </head>
     <body>
         <h1>EU</h1>
-        <a href="hello.html> Click here!"></a>
+        <a href="hello.html"> Click here!"></a>
         <div id="top">
             <input name="country" list="countries" placeholder="Country">
         </div>
         <div id="middle">
             <datalist id="countries">
-                <option value="France"></option>
-                <option value="Italy"></option>
-                <option value="Germany"></option>
-                <option value="UK"></option>
+                <option value="France">
+                <option value="Italy">
+                <option value="Germany">
+                <option value="UK">
             </datalist>
         </div>
     </body>
