--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,7 @@
             <input type="text" placeholder="full Name" name="name">
             <button>Submit</button>
         </form>
+        <a href="country.html">Click here!"</a>
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
             <li>git clone</li>
@@ -27,6 +28,11 @@
                 <th>Name</th>
                 <th>date of birth</th>
                 <th>phone</th>
+            </tr>
+            <tr>
+                <th>Gerd</th>
+                <th>26.11.1973</th>
+                <th>3483396202</th>
             </tr>
         </table>
         <img src="2A WM.jpg" width="20%" class="center">
