--- a/webpage0.html
+++ b/webpage0.html
@@ -8,10 +8,12 @@
         #top {
             font-size:16px;
             color:blue;
+            text-align:center;
         }
         #middle {
             font-size:14px;
             color:magenta;
+            text-align:center;
         }
         .name {
             font-weight:bold;
@@ -23,10 +25,10 @@
     </style>
     <body>
         <div id="top">
-           This is the <span class="name">top</span>of my web page.
+           This is the <span class="name"> top</span> of my web page.
         </div>
         <div id="middle">
-           This is the <span class="guest">middle</span>of my web page.
+           This is the <span class="guest"> middle</span> of my web page.
         </div>
     </body>
 <html>
