matched webpage name with link

--- a/table.html
+++ b/table.html
@@ -12,11 +12,11 @@
                 <th>link</th>
             </tr>
             <tr>
-                <th>
-                    facebook
-                    <a href="https://facebook.com">Click here!</a>
-                </th>
-                <th>google<a href="https://facebook.com">Click here!</a></th>
+                <th>facebook</th>
+                <th><a href="https://facebook.com">www.facebook.com</a></th>
+            </tr>
+                <th>google</th>
+                <th><a href="https://facebook.com">www.google.com</a></th>
             </tr>
         </table>
     </body>
