corrected click button

--- a/country.html
+++ b/country.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Table</title>
+        <title>datalist</title>
         <link rel="stylesheet" href="table.css">
     </head>
     <body>
         <h1>EU</h1>
-        <a href="hello.html">Click here!"></a>
+        <a href="hello.html">Click here!</a>
         <div id="top">
             <input name="country" list="countries" placeholder="Country">
         </div>
