--- a/country.html
+++ b/country.html
@@ -7,10 +7,8 @@
     <body>
         <h1>EU</h1>
         <a href="hello.html">Click here!</a>
-        <div id="top">
+        <div>
             <input name="country" list="countries" placeholder="Country">
-        </div>
-        <div id="middle">
             <datalist id="countries">
                 <option value="France">
                 <option value="Italy">
