link to pages added

--- a/country.html
+++ b/country.html
@@ -16,5 +16,10 @@
                 <option value="UK">
             </datalist>
         </div>
+        <a href="country.html">Select Country"</a>
+        <a href="datalist.html">Datalist</a>
+        <a href="divTOP.html">Paragraph design</a>
+        <a href="pic0.html">2A WM</a>
+        <a href="table.html">Favorit webpages</a>
     </body>
 <html>
