--- a/country.html
+++ b/country.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>EU</h1>
-        <a href="hello.html">Click here!</a>
         <div>
             <input name="country" list="countries" placeholder="Country">
             <datalist id="countries">
@@ -16,7 +15,7 @@
                 <option value="UK">
             </datalist>
         </div>
-        <a href="country.html">Select Country"</a>
+        <a href="index.html">Select Country"</a>
         <a href="datalist.html">Datalist</a>
         <a href="divTOP.html">Paragraph design</a>
         <a href="pic0.html">2A WM</a>
