--- a/webpage0.html
+++ b/webpage0.html
@@ -30,4 +30,9 @@
             color:orange;
         }
     </style>
+    <a href="country.html">Select Country"</a>
+    <a href="datalist.html">Datalist</a>
+    <a href="index.html">Paragraph design</a>
+    <a href="pic0.html">2A WM</a>
+    <a href="table.html">Favorit webpages</a>
 <html>
