--- a/table.html
+++ b/table.html
@@ -16,8 +16,13 @@
                 <th><a href="https://facebook.com">www.facebook.com</a></th>
             </tr>
                 <th>google</th>
-                <th><a href="https://facebook.com">www.google.com</a></th>
+                <th><a href="https://google.com">www.google.com</a></th>
             </tr>
         </table>
     </body>
+    <a href="country.html">Select Country"</a>
+    <a href="datalist.html">Datalist</a>
+    <a href="webpage0.html">Paragraph design</a>
+    <a href="pic0.html">2A WM</a>
+    <a href="index.html">Favorit webpages</a>
 <html>
