--- a/table.html
+++ b/table.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>cs50!</title>
-        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>My favorit webpages</h1>
@@ -20,7 +19,7 @@
             </tr>
         </table>
     </body>
-    <a href="country.html">Select Country"</a>
+    <a href="country.html">Select Country</a>
     <a href="datalist.html">Datalist</a>
     <a href="webpage0.html">Paragraph design</a>
     <a href="pic0.html">2A WM</a>
