--- a/pic0.html
+++ b/pic0.html
@@ -3,6 +3,10 @@
     <head>
         <title>WFO Bozen</title>
     </head>
+    <a href="country.html">Select Country</a>
+    <a href="datalist.html">Datalist</a>
+    <a href="index.html">Paragraph design</a>
+    <a href="table.html">Favorit webpages</a>
     <style>
         h1 {
             color:brown;
