--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>GIT</h1>
+        <h1>My webpage</h1>
         <form>
             <input type="text" placeholder="full Name" name="name">
             <button>Submit</button>
         </form>
-        <a href="country.html">Country.html"</a>
+        <a href="country.html">Select Country</a>
+        <a href="datalist.html">Datalist</a>
+        <a href="webpage0.html">Paragraph design</a>
+        <a href="pic0.html">2A WM</a>
+        <a href="table.html">Favorit webpages</a>
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
             <li>git clone</li>
