--- a/country.html
+++ b/country.html
@@ -2,23 +2,20 @@
 <html>
     <head>
         <title>datalist</title>
-        <link rel="stylesheet" href="table.css">
     </head>
     <body>
-        <h1>EU</h1>
-        <div>
-            <input name="country" list="countries" placeholder="Country">
-            <datalist id="countries">
-                <option value="France">
-                <option value="Italy">
-                <option value="Germany">
-                <option value="UK">
-            </datalist>
-        </div>
-        <a href="index.html">Select Country"</a>
+        <h1>Select your country</h1>
+        <input name="country" list="countries" placeholder="Country">
+        <datalist id="countries">
+            <option value="France">
+            <option value="Italy">
+            <option value="Germany">
+            <option value="UK">
+        </datalist>
+    </body>
+        <a href="index.html">Home</a>
         <a href="datalist.html">Datalist</a>
         <a href="divTOP.html">Paragraph design</a>
         <a href="pic0.html">2A WM</a>
         <a href="table.html">Favorit webpages</a>
-    </body>
 <html>
