--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
             <input type="text" placeholder="full Name" name="name">
             <button>Submit</button>
         </form>
-        <a href="country.html">Country.html"</a>
-        <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
-        <ul>
-            <li>git clone</li>
+
+        <a href="datalist.html">Datalist</a>
+        <a href="divTOP.html">Paragraph design</a>
+        <a href="pic0.html">2A WM</a>
+        <a href="table.html">Favorit webpages</a>
+        <h2 style="color:darkmagenta;text-align:center;">selection</h2>
+        <ul class="list">
+            <li><a href="country.html">Select Country"</a></li>
             <li>touch + filename</li>
             <li>git add + filenames</li>
             <li>git commit -m + "message"</li>
