--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>cs50!</title>
+        <title>cs50</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -12,20 +12,25 @@
         </form>
         <h2 style="color:darkmagenta;text-align:center;">useful commands</h2>
         <ul>
-            <li><a href="country.html">Select Country</a></li>
-            <li>touch + filename</li>
-            <li>git add + filenames</li>
-            <li>git commit -m + "message"</li>
-            <li>git status</li>
-            <li>git push / git pull</li>
-            <li>git log</li>
-            <li>git reset --hard + hash nr</li>
-            <li>git reflog</li>
+            <li><a href="picture.html">Go to picture.html</a></li>
+            <li><a href="table.html">Go to table.html</a></li>
+            <li><a href="paragraph.html">Go to paragraph.html</a></li>
         </ul>
+        <img src="2A WM.jpg" width="20%" class="center">
+        <table>
+            <tr>
+                <th>webpage</th>
+                <th>link</th>
+            </tr>
+            <tr>
+                <th>facebook</th>
+                <th><a href="https://facebook.com">www.facebook.com</a></th>
+            </tr>
+                <th>google</th>
+                <th><a href="https://google.com">www.google.com</a></th>
+            </tr>
+        </table>
         <div>cs50</div>
     </body>
-    <a href="datalist.html">Datalist</a>
     <a href="webpage0.html">Paragraph design</a>
-    <a href="pic0.html">2A WM</a>
-    <a href="table.html">Favorit webpages</a>
 <html>
