index.html paragraph.html picture.html table.html added

--- a/table.html
+++ b/table.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>cs50!</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>My favorit webpages</h1>
@@ -19,9 +20,7 @@
             </tr>
         </table>
     </body>
-    <a href="country.html">Select Country</a>
-    <a href="datalist.html">Datalist</a>
-    <a href="webpage0.html">Paragraph design</a>
-    <a href="pic0.html">2A WM</a>
-    <a href="index.html">Favorit webpages</a>
+   <a href="index.html">Go back to My webpage</a>
+    <a href="picture.html">Go to picture.html</a>
+    <a href="paragraph.html">Go to paragraph.html</a>
 <html>
